--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -5,7 +5,7 @@
         <a href="./help.html" draggable="false"><img src="./assets/icons/question.svg" alt="Question Icon" class="help-icon" draggable="false"></a>
         <img src="./assets/img/xxx.jpg" alt="Profile Picture" class="profile-picture" id="profile-picture" draggable="false">
         <div class="logout-modal d-none" id="logout-modal">
-            <a href="./index.html">Logout</a>
+            <a href="./login.html">Logout</a>
         </div>
     </div>
 </div>
